# Invest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  量价因子股票横截面选股_横纵分析报告.md
.claude/: settings.local.json
cta/: analysis.py  backtest.py  data_loader.py  portfolio.py  position_sizing.py  risk.py  signals.py
docs/: beliefs.md  carry_principles.md  data_prepare.md  price_trend_signal_principles.md  risk_principles.md  signal_principles.md
equity/: analysis.py  backtest.py  data.py  features.py  insight_from_gpt.md  labels.py  model.py  progress_report.md
notebooks/: carry_analysis.ipynb  equity_momentum.ipynb  equity_signal_validation.ipynb  price_trend_signal_research.ipynb  xgboost.ipynb
output/: combination_summary.csv  equity_window_summary.csv  risk_summary.csv  signal_summary.csv
research/: README.md  TEMPLATE.md
sp500_relative_alpha/: 1st_place_solution.md  README.md  __init__.py  alpha101_features.py  alpha101_ops.py  ashare_data_loader.py  audit_artifacts.py  audit_inputs.py  audit_pipeline.py  catboost_models.py  daily_coverage_audit.py  daily_data_loader.py  data_snapshot.py  databento_source.py  feature_transforms.py  folds.py  labels.py  metrics.py  modeling.py  multiple_testing.py  ohlcv_features.py  optiver_feature_pipeline.py  research.ipynb  research_ashare_universe.ipynb  research_ashare_v1.ipynb  research_dataset.py  research_sector_neutral.ipynb  research_v2.ipynb  research_v3_presentation.ipynb  sector_data.py  xgboost_models.py
tools/: download_data.py  param_scan.py  random_benchmark.py  (+4 more)
(+71 files in other folders)
