[project]
name = "invest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "databento>=0.74.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "yfinance>=0.2.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=3.2.0",
]
